fixed missing background image

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -51,7 +51,7 @@ img#background {
   height: 100vh;
 }
 body {
-  background: url("../assets/images/background.png") no-repeat center center fixed;
+  background: url("/assets/images/background.png") no-repeat center center fixed;
   background-size: cover;
   width: 100vw;
   height: 100vh;
